--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- סרגל ניווט -->
 <div class="header-top"></div>
 
-<img style="width: 10%; float: right;margin-right: 5%;" src="././../assets/לוגו1.png">
+<img style="width: 10%; float: right;margin-right: 5%;"  routerLink="/home" src="././../assets/לוגו1.png">
 
 <nav class="c-main-menu" aria-labelledby="mainmenulabel">
 
