--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,10 +5,10 @@
      <h2>hhhhhhhhhhhhhh</h2>
      <h3>hhhhhhhhhhh</h3>
      <div class="button-link">
-      <button style="background-color:  #53b2f154" ><a href="../open-game">כניסה למשח</a>ק</button>
-      <button style="background-color:  #F8D02D">כניסה לאונליין</button>
-      <button style="background-color:  #F8D02D">כניסה לאונליין</button>
-      <button style="background-color:  #53b2f154" >הוסף משחק</button>
+      <button (click)="startGame()" style="background-color:  #53b2f154" >כניסה למשחק</button>
+      <button (click)="startOnlin()" style="background-color:  #F8D02D">כניסה לאונליין</button>
+      <button style="background-color:  #F8D02D">אודות</button>
+      <button (click)="newGame()" style="background-color:  #53b2f154" > הוסף משחק חדש</button>
 </div></div>
 </div>
 <div>  <app-category ></app-category> </div>
