--- a/src/app/components/add-question/add-question.component.html
+++ b/src/app/components/add-question/add-question.component.html
@@ -1,37 +1,37 @@
 <div class="add-question">
-    
+
     <div class="settings">
         <div class="level">
-            <p>רמה:</p>
-            <button (click)="level(1)">קל</button>
-            <button (click)="level(2)">בינוני</button>
-            <button (click)="level(3)">קשה</button><br />
+            <label>רמה</label>
+            <div id="easy" class="triangle-up" (click)="level(1)"><label >קל</label></div>
+            <div id="medium"  class="triangle-up" (click)="level(2)"><label >בינוני</label></div>
+            <div id="Hard"  class="triangle-up" (click)="level(3)"><label >קשה</label></div>
+           
         </div>
         <input type="file" value="הוסף תמונה" #imageInput type="file" accept="image/*"
-            (change)="onSelectFile($event)" /><br />
+            (change)="onSelectFile($event)" />
         <h6 *ngIf="notgoodimg">לא ניתן לקרוא. נא לבחור קובץ מסוג תמונה בלבד</h6>
-        <img [src]="url" height="200" *ngIf="!notgoodimg"> <br />
+        <img [src]="url" height="200" *ngIf="!notgoodimg"> 
 
-        <button (click)="caterories=true">בחירת קטגוריות</button><br />
+        <button (click)="caterories=true">בחירת קטגוריות</button>
         <div *ngIf="caterories">
             <h5 *ngIf="enyCategory">יש לבחור לפחות קטגוריה אחת</h5>
             <app-cateroris-to-choose (chooseCategories)=" choose($event)"></app-cateroris-to-choose>
         </div>
-
-        <button (click)="addAnser()">הוסף תשובה נוספת</button><br /><br />
-        <button (click)=onlysave()>שמור</button><button (click)=saveAndAnotherQuestion()> שמור והוסף
-            שאלה</button><br /><br /><br />
+        <button  (click)="addAnser()">הוסף תשובה נוספת</button>
+        <button (click)=saveAndAnotherQuestion()> שמור והוסף שאלה</button>
+     <button id="save" (click)=onlysave()>שמור</button>
     </div>
     <div class="Qustion">
-        <label>שאלה:</label>
+        <label style="background-color: #128089;color: white;">שאלה: </label>
         <input type="text" #Qustion [(ngModel)]="newquestion.question1" />
 
         <div *ngFor="let in of arrnumansers ;let i = index">
             <label>תשובה {{i+1}}:</label>
-            
+
             <input type="text" id="i" name="i" [(ngModel)]="arrnumansers[i].name" />
         </div>
-        <p>תשובה נכונה:</p>
+        <label>תשובה נכונה:</label>
         <input type="number" [max]="numAnser" min="1" [(ngModel)]="currentanser" />
     </div>
 </div>
