--- a/src/app/components/choose-question/choose-question.component.scss
+++ b/src/app/components/choose-question/choose-question.component.scss
@@ -26,11 +26,14 @@ $color5:#E8E7E7;
     }
 }
 .navbar button{
-    margin: 8px;
+    margin: 5px;
     background-color: #F8D02D;
     padding: 20px;
     border: none;
     color: white;
     margin-top: 5%;
-}
+   
+} .navbar button:focus{
+    border: solid;
+    border-color: white;}
 
