--- a/src/app/components/new-game/new-game.component.scss
+++ b/src/app/components/new-game/new-game.component.scss
@@ -6,7 +6,7 @@ $color5:#E8E7E7;
 
 .new-game-right{
     display: inline-block;
-    background-image: url("../../../assets/תמונה3.png ");
+    background-image: url("../../../assets/רקע\ כחול.png ");
     background-position: center; 
     background-repeat: no-repeat;
      float: left;
@@ -15,7 +15,7 @@ $color5:#E8E7E7;
 
 }
 .new-game-left{
-    background-image: url("../../../assets/תמונה3.png ");
+    background-image: url("../../../assets/רקע\ כחול.png ");
     float: left;
     background-position: center; 
     background-repeat: no-repeat;
