--- a/src/app/components/start-game/start-game.component.scss
+++ b/src/app/components/start-game/start-game.component.scss
@@ -1,7 +1,13 @@
+$color1:#157780;
+$color2:#F99D28;
+$color3:#F8D02D;
+$color4:#858586;
+$color5:#E8E7E7;
 .my_class{
   display:none
 }
 .question{
+  
   padding: 1%;
   border-style: solid; 
   background-color: rgb(241 241 241);
@@ -11,17 +17,18 @@
    text-align: center;
     height: 20% ;
     margin: auto;
+    margin-bottom: 40px;
 }
 .game{
   
-    background-image: url("../../../assets/תמונה3.png")
+    background-image: url("../../../assets/רקע\ כחול.png")
     ;
     text-align: center;
     background-position: center; 
     // background-repeat: no-repeat;
     display: inline-block;
     float: left;
-    width: 80%;
+    width: 100%;
     height: 100%;
 
 }
@@ -30,11 +37,12 @@
   
     border: 6px solid rgba(204, 201, 201, 0.281);
 
+    padding: 15px;
     background-color: rgb(241 241 241) ;
     position: relative;
     width: 18%;
     display: inline-block;
-    height: 100px;
+    height: 122px;
     // box-shadow: 0 1px 2px rgba(123, 36, 173, 0.685), 0 1px 2px rgba(69, 59, 206, 0.616);
     // transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     // box-shadow: 2px 30px 22px rgba(126, 32, 248, 0.808), 0 10px 10px rgba(103, 121, 228, 0.952);
@@ -63,32 +71,51 @@
     background-color: #f99e28e5;
     color: #128089;
     margin: 5%;
-    padding: 2%;
+    padding: 1%;
+    width: 152px;
   }
 
 
- .numQuestion h2{
-  border-radius: 68%;
-  border: 2px solid black;
-  width: 30%;
-  margin: auto;
+//  .numQuestion h2{
+//   border-radius: 68%;
+//   border: 2px solid black;
+//   width: 30%;
+//   margin: auto;
+//  }
+
+//  .numQuestion h2 :before{
+
+//   background: rgb(180, 177, 177) ;
+//   border: 4px solid rgb(180, 177, 177);
+//   content: "";
+//   display: block;
+//   position: absolute;
+//   top: 4px;
+//   left: 4px;
+//   right: 4px;
+//   bottom: 4px;
+//   pointer-events: none;
+//   border-radius: 68%;
+//   border: 2px solid black;
+//   width: 50%;
+//   margin: auto;
+//  }
+
+img{
+  
+    height: 50px;
+    margin-top: 10px;
  }
-
- .numQuestion h2 :before{
-
-  background: rgb(180, 177, 177) ;
-  border: 4px solid rgb(180, 177, 177);
-  content: "";
-  display: block;
-  position: absolute;
-  top: 4px;
-  left: 4px;
-  right: 4px;
-  bottom: 4px;
-  pointer-events: none;
-  border-radius: 68%;
-  border: 2px solid black;
-  width: 50%;
-  margin: auto;
+ #object0{
+  color:$color2;
  }
-
+ #object1{
+  color:$color3;
+ }
+ #object2{
+  color:$color1;
+ }#object3{
+  color: $color4;
+ }#object4{
+  color: $color5;
+ }
