--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,6 +15,8 @@
     <li  ><a id="6" class="c-main-menu__link" href="#" routerLinkActive="my_class">אודות</a></li>
     <li ><a id="7" routerLink="/login" class="c-main-menu__link" href="#" routerLinkActive="my_class">אזור אישי</a></li>
     <li class="c-logo"> {{namePlayer}} 
+      <img id="myprofil" [src]="url" height="200" ><br><br>
+
      </li>
   </ul>
 </nav>
