--- a/src/app/components/game-online/game-online.component.scss
+++ b/src/app/components/game-online/game-online.component.scss
@@ -19,9 +19,12 @@
     color: #128089;
 }
 .exmple-game h3{
-    direction: rtl;
-    margin-right: 43%;
+    text-align: center;
     color: rgb(143, 141, 141);
+    width: 73%;
+    margin: auto;
+    margin-top: 5%;
+    border-radius: 10px;
 }
 button   {
        background-color: #56baed;
